# zklings

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
dev/: Cargo.toml
exercises/00_intro/: intro1.rs
exercises/12_options/: options2.rs
exercises/circom/: 01_simple_addition.circom  README.md
exercises/circom/01_signals/: 01_signals.circom  01_signals.json  02_signals.circom  02_signals.json  README.md
exercises/circom/02_constraints/: 01_constraints.circom  01_constraints.json  README.md
exercises/circom/02_templates/: README.md
exercises/circom/03_templates/: 01_templates.circom
exercises/circom/04_templates/: README.md
exercises/finite_fields/: README.md  finite_fields_001.ipynb  finite_fields_002.ipynb
exercises/finite_fields/00_modulo/: 01_basic_modulo.rs  02_negative_modulo.rs  03_modular_addition.rs  04_modular_subtraction.rs  05_negative_subtraction.rs  README.md
exercises/finite_fields/01_sets_and_groups/: 01_binary_operations.rs  01_intro.rs  02_binary_operations.rs  02_identity.rs  03_inverse.rs  04_associative.rs  05_group.rs  README.md
exercises/intro/: README.md  intro1.rs
exercises/math/: 01_simple_question.md  03_modular_addition.md  04_modular_subtraction.md  05_negative_subtraction.md  README.md
exercises/plonky3/: Cargo.toml  README.md
exercises/plonky3/addition/: Cargo.toml  README.md
exercises/plonky3/addition/src/: main.rs
exercises/plonky3/fibonacci/: Cargo.toml  main.rs
exercises/plonky3/fibonacci/src/: addition.rs
exercises/plonky3/src/: README.md  addition.rs  fibonacci.rs
exercises/zk-protocols-basics/01_discrete_log_problem/: README.md  dlp1.rs  dlp2.rs
exercises/zk-protocols-basics/02_schnorr_protocol/: 01_schnorr_protocol.rs  README.md
exercises/zk-protocols-basics/02_split_and_fold/: README.md  split_and_fold.rs
exercises/zk-protocols-basics/03_pedersen_commitment/: 01_pedersen_commitment.rs  README.md
solutions/12_options/: options2.rs
solutions/circom/01_signals/: 01_signals.circom  02_signals.circom
solutions/circom/02_constraints/: 01_constraints.circom
solutions/circom/03_templates/: 01_templates.circom
solutions/finite_fields/00_modulo/: 01_basic_modulo.rs  02_negative_modulo.rs  03_modular_addition.rs  04_modular_subtraction.rs  05_negative_subtraction.rs
solutions/finite_fields/01_sets_and_groups/: 01_binary_operations.rs  01_intro.rs  02_binary_operations.rs  02_identity.rs  03_inverse.rs  04_associative.rs  05_group.rs
solutions/math/: 01_basic_modulo.md  01_simple_question.md  02_negative_modulo.md  03_modular_addition.md  05_negative_subtraction.md
solutions/zk-basics/: dlp.rs
solutions/zk-protocols-basics/01_discrete_log_problem/: dlp1.rs  dlp2.rs
solutions/zk-protocols-basics/02_schnorr_protocol/: 01_schnorr_protocol.rs
solutions/zk-protocols-basics/02_split_and_fold/: split_and_fold.rs
src/: app_state.rs  cargo_toml.rs  circom_exercise.rs  circuit_ceremony.rs  circuit_generate_verify.rs  cmd.rs  cmd_snarkjs.rs  embedded.rs  exercise.rs  exercise_circom.rs  info_file.rs  init.rs  main.rs  path.rs  run.rs  time.rs  watch.rs
src/dev/: check.rs  new.rs
src/list/: state.rs
src/watch/: notify_event.rs  state.rs
tests/: integration_tests.rs
zklings-macros/: Cargo.toml  info.toml
zklings-macros/src/: lib.rs
