# Don't edit the `bin` list manually! It is updated by `cargo run -- dev update`. This comment line will be stripped in `rustlings init`.
bin = [
  { name = "intro1", path = "../exercises/intro/intro1.rs" },
  { name = "intro1_sol", path = "../solutions/intro/intro1.rs" },
  { name = "01_basic_modulo", path = "../exercises/math/01_basic_modulo.md" },
  { name = "01_basic_modulo_sol", path = "../solutions/math/01_basic_modulo.md" },
  { name = "02_negative_modulo", path = "../exercises/math/02_negative_modulo.md" },
  { name = "02_negative_modulo_sol", path = "../solutions/math/02_negative_modulo.md" },
  { name = "03_modular_addition", path = "../exercises/math/03_modular_addition.md" },
  { name = "03_modular_addition_sol", path = "../solutions/math/03_modular_addition.md" },
  { name = "04_modular_subtraction", path = "../exercises/math/04_modular_subtraction.md" },
  { name = "04_modular_subtraction_sol", path = "../solutions/math/04_modular_subtraction.md" },
  { name = "05_negative_subtraction", path = "../exercises/math/05_negative_subtraction.md" },
  { name = "05_negative_subtraction_sol", path = "../solutions/math/05_negative_subtraction.md" },
  { name = "01_signals", path = "../exercises/circom/01_signals/01_signals.circom" },
  { name = "01_signals_sol", path = "../solutions/circom/01_signals/01_signals.circom" },
  { name = "02_signals", path = "../exercises/circom/01_signals/02_signals.circom" },
  { name = "02_signals_sol", path = "../solutions/circom/01_signals/02_signals.circom" },
  { name = "01_templates", path = "../exercises/circom/02_templates/01_templates.circom" },
  { name = "01_templates_sol", path = "../solutions/circom/02_templates/01_templates.circom" },
]

[package]
name = "exercises"
edition = "2021"
# Don't publish the exercises on crates.io!
publish = false
