# Don't edit the `bin` list manually! It is updated by `cargo run -- dev update`. This comment line will be stripped in `rustlings init`.
bin = [
  { name = "intro1", path = "../exercises/intro/intro1.rs" },
  { name = "intro1_sol", path = "../solutions/intro/intro1.rs" },
  { name = "01_basic_modulo", path = "../exercises/finite_fields/00_modulo/01_basic_modulo.rs" },
  { name = "01_basic_modulo_sol", path = "../solutions/finite_fields/00_modulo/01_basic_modulo.rs" },
  { name = "02_negative_modulo", path = "../exercises/finite_fields/00_modulo/02_negative_modulo.rs" },
  { name = "02_negative_modulo_sol", path = "../solutions/finite_fields/00_modulo/02_negative_modulo.rs" },
  { name = "03_modular_addition", path = "../exercises/finite_fields/00_modulo/03_modular_addition.rs" },
  { name = "03_modular_addition_sol", path = "../solutions/finite_fields/00_modulo/03_modular_addition.rs" },
  { name = "04_modular_subtraction", path = "../exercises/finite_fields/00_modulo/04_modular_subtraction.rs" },
  { name = "04_modular_subtraction_sol", path = "../solutions/finite_fields/00_modulo/04_modular_subtraction.rs" },
  { name = "05_negative_subtraction", path = "../exercises/finite_fields/00_modulo/05_negative_subtraction.rs" },
  { name = "05_negative_subtraction_sol", path = "../solutions/finite_fields/00_modulo/05_negative_subtraction.rs" },
  { name = "01_signals", path = "../exercises/circom/01_signals/01_signals.circom" },
  { name = "01_signals_sol", path = "../solutions/circom/01_signals/01_signals.circom" },
  { name = "02_signals", path = "../exercises/circom/01_signals/02_signals.circom" },
  { name = "02_signals_sol", path = "../solutions/circom/01_signals/02_signals.circom" },
  { name = "01_constraints", path = "../exercises/circom/02_constraints/01_constraints.circom" },
  { name = "01_constraints_sol", path = "../solutions/circom/02_constraints/01_constraints.circom" },
  { name = "01_templates", path = "../exercises/circom/03_templates/01_templates.circom" },
  { name = "01_templates_sol", path = "../solutions/circom/03_templates/01_templates.circom" },
  { name = "01_binary_operations", path = "../exercises/finite_fields/01_sets_and_groups/01_binary_operations.rs" },
  { name = "01_binary_operations_sol", path = "../solutions/finite_fields/01_sets_and_groups/01_binary_operations.rs" },
  { name = "02_identity", path = "../exercises/finite_fields/01_sets_and_groups/02_identity.rs" },
  { name = "02_identity_sol", path = "../solutions/finite_fields/01_sets_and_groups/02_identity.rs" },
  { name = "03_inverse", path = "../exercises/finite_fields/01_sets_and_groups/03_inverse.rs" },
  { name = "03_inverse_sol", path = "../solutions/finite_fields/01_sets_and_groups/03_inverse.rs" },
  { name = "04_associative", path = "../exercises/finite_fields/01_sets_and_groups/04_associative.rs" },
  { name = "04_associative_sol", path = "../solutions/finite_fields/01_sets_and_groups/04_associative.rs" },
  { name = "05_group", path = "../exercises/finite_fields/01_sets_and_groups/05_group.rs" },
  { name = "05_group_sol", path = "../solutions/finite_fields/01_sets_and_groups/05_group.rs" },
  { name = "dlp1", path = "../exercises/zk-protocols-basics/01_discrete_log_problem/dlp1.rs" },
  { name = "dlp1_sol", path = "../solutions/zk-protocols-basics/01_discrete_log_problem/dlp1.rs" },
  { name = "dlp2", path = "../exercises/zk-protocols-basics/01_discrete_log_problem/dlp2.rs" },
  { name = "dlp2_sol", path = "../solutions/zk-protocols-basics/01_discrete_log_problem/dlp2.rs" },
  { name = "01_schnorr_protocol", path = "../exercises/zk-protocols-basics/02_schnorr_protocol/01_schnorr_protocol.rs" },
  { name = "01_schnorr_protocol_sol", path = "../solutions/zk-protocols-basics/02_schnorr_protocol/01_schnorr_protocol.rs" },
]

[package]
name = "exercises"
edition = "2021"
# Don't publish the exercises on crates.io!
publish = false
